tempfile/async-stream/tests/ui/yield_in_async.stderr
error[E0658]: yield syntax is experimental
 --> tests/ui/yield_in_async.rs:6:13
  |
6 |             yield 123;
  |             ^^^^^^^^^
  |
  = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information

error[E0727]: `async` coroutines are not yet supported
 --> tests/ui/yield_in_async.rs:6:13
  |
6 |             yield 123;
  |             ^^^^^^^^^
